--- a/11_Challenge/index.html
+++ b/11_Challenge/index.html
@@ -52,6 +52,8 @@
           <p id="phoneText" class="card-text"></p>
           <p id="adressText" class="card-text"></p>
           <p id="pizzaText" class="card-text"></p>
+          <img id="peperoni" class="none pizzaImg" src="https://placeralplato.com/files/2016/01/Pizza-con-pepperoni.jpg" alt="Peperoni">
+          <img id="hawaiana" class="none pizzaImg" src="https://cdn2.cocinadelirante.com/sites/default/files/styles/gallerie/public/images/2019/11/como-hacer-pizza-hawaiana.jpg" alt="Hawaiana">
         </div>
       </div>
  
